# SUI_patreon

./: .env.docker.example  CLAUDE.md  DOCKER.md  README.md  docker-compose.yml
app/: .env.example  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
app/app/: globals.css  layout.tsx  page.tsx
app/components/: Providers.tsx
app/constants/: config.ts  creators.mock.ts  index.ts  landing.ts  mocks.ts  navigation.ts  query-keys.ts  routes.ts
app/hooks/: useAddressNames.ts  useAllCreators.ts  useAutoRegister.ts  useComments.ts  useCreator.ts  useCreatorBlobUrl.ts  useCreatorPosts.ts  useCreatorRevenue.ts  useDeleteCreator.ts  useExecuteTransaction.ts  useLatestPost.ts  useLatestPosts.ts  useMySubscriptions.ts  usePostContent.ts  usePublishPost.ts  useReaction.ts  useSeal.ts  useSearch.ts  useSubscribe.ts  useSubscriptionStatus.ts  useUpdateProfile.ts  useWithdrawFunds.ts
app/lib/: cn.ts  contract-constants.ts  contract.ts  format.ts  post-service.ts  seal.ts  service-lookup.ts  subscriber-count.ts  walrus.ts
app/stores/: ui.store.ts
app/types/: common.types.ts  creator.types.ts  index.ts  nav.ts  (+4 more)
contract/: Move.toml  Published.toml  todo.md
docs/: ENOKI.md  INDEXER.md  SEAL.md  SUINS.md  WALRUS.md
indexer/: .env.example  Cargo.toml  Dockerfile  README.md
indexer/migrations/20250101000000_depatreon_schema/: down.sql  up.sql
indexer/seed/: events_log_sample.sql
indexer/src/: events.rs  handlers.rs  lib.rs  main.rs  models.rs  schema.rs
patreon/: .env.example  package-lock.json  package.json  pnpm-lock.yaml
scripts/: run-local.sh  run.sh
(+145 files in other folders)
