[package]
name = "depatreon-indexer"
version = "0.1.0"
edition = "2021"
description = "DePatreon custom indexer — indexes creators, posts, subscriptions to PostgreSQL"
default-run = "depatreon-indexer"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[dependencies]
# Core framework
sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui.git", branch = "testnet" }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"

# Database
diesel = { version = "2.0", features = ["postgres", "r2d2", "serde_json"] }
diesel-async = { version = "0.5", features = ["bb8", "postgres", "async-connection-wrapper"] }
diesel_migrations = "2.0"

# Config & serialization
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
url = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
bcs = "0.1"

# REST API
axum = { version = "0.7" }
tower-http = { version = "0.5", features = ["cors"] }

# SUI / Framework (re-exports from sui-indexer-alt-framework)
sui-types = { git = "https://github.com/MystenLabs/sui.git", branch = "testnet" }
move-core-types = { git = "https://github.com/MystenLabs/sui.git", branch = "testnet" }
tracing = "0.1"
